<resources>
    <string name="app_name">Pokemon List</string>
    <string name="pokemon_name">No data</string>
    <string name="pokemon_weight">No data</string>
    <string name="pokemon_height">No data</string>
    <string name="description_icon">Pokemon icon</string>
    <string name="pokemon_type">No data</string>
    <string name="button_back">back</string>
    <string name="no_internet">No internet!</string>
    <string name="connection_established">Internet connection has been established</string>
    <string name="connection_error">A connection error has been occurred!</string>
</resources>