<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recycler_item_bg"
    android:padding="8dp">

    <ImageView
        android:id="@+id/pokemonIconDialog"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:contentDescription="@string/description_icon"
        app:layout_constraintBottom_toBottomOf="@+id/pokemonTypeDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/pokemonNameDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/pokemonIconDialog"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/pokemon_name"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"/>

    <TextView
        android:id="@+id/pokemonWeightDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/pokemonIconDialog"
        app:layout_constraintTop_toBottomOf="@+id/pokemonNameDialog"
        android:text="@string/pokemon_weight"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"/>

    <TextView
        android:id="@+id/pokemonHeightDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/pokemonIconDialog"
        app:layout_constraintTop_toBottomOf="@+id/pokemonWeightDialog"
        android:text="@string/pokemon_height"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"/>

    <TextView
        android:id="@+id/pokemonTypeDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/pokemonIconDialog"
        app:layout_constraintTop_toBottomOf="@+id/pokemonHeightDialog"
        android:text="@string/pokemon_type"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pokemonTypeDialog"
        android:layout_marginTop="8dp"
        android:textSize="22sp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/button_back" />

</androidx.constraintlayout.widget.ConstraintLayout>